--- a/CartoTD1/Bonus/style.css
+++ b/CartoTD1/Bonus/style.css
@@ -7,3 +7,20 @@ body {
   width: 80%;
   height: 250px;
 }
+
+.capteur {
+  margin: auto;
+}
+
+.canvas_capteur {
+  margin-top: 10px;
+  width: 100%;
+  height: 250px;
+  border: 5px solid #100000
+}
+
+.cube_orientation {
+  width: 100%;
+  height: 200px;
+  margin: auto;
+}
